Add validation check for all required property before starting the booking script.

--- a/src/main/resources/booking.properties
+++ b/src/main/resources/booking.properties
@@ -3,11 +3,12 @@ irctcPassword=
 fromStationCode=HWH
 toStationCode=DLI
 # Journey date format: dd/mm/yyyy
-journeyDate=24/04/2024
+journeyDate=28/04/2024
 quota=TATKAL
-trainNumber=12311
+trainNumber=12311  
 # Valid train classes: [2S, SL, CC, 3E, 3A, 2A, 1A]. Please check the train for available classes.
 trainClass=3A
+# Maximum 4 passengers for TATKAL and 6 passengers for non TATKAL booking are allowed in a single ticket.
 passengerCount=3
 # Passenger details format: <full name> | <age> | <gender: [M, F, T]> | <berth preference: [LB, MB, UB, SL, SU]> (optional)
 passenger1=Abhishek Anand | 25 | M | SL
