--- a/src/main/resources/booking.properties
+++ b/src/main/resources/booking.properties
@@ -8,10 +8,12 @@ quota=TATKAL
 trainNumber=12311
 # Valid train classes: [2S, SL, CC, 3E, 3A, 2A, 1A]. Please check the train for available classes.
 trainClass=3A
+upiId=
 # Maximum 4 passengers for TATKAL and 6 passengers for non TATKAL booking are allowed in a single ticket.
 passengerCount=3
 # Passenger details format: <full name> | <age> | <gender: [M, F, T]> | <berth preference: [LB, MB, UB, SL, SU]> (optional)
+# Number of passenger details should be equal to the value of 'passengerCount' property with
+# property key as: passenger1, passenger2, passenger3 and so on...
 passenger1=Abhishek Anand | 25 | M | SL
 passenger2=Isha Anand | 20 | F | SU
 passenger3=Priyanshu Anand | 15 | M
-upiId=
