Add readme file and change properties key in property file.

--- a/src/main/resources/booking.properties
+++ b/src/main/resources/booking.properties
@@ -1,19 +1,20 @@
-irctcUsername=
-irctcPassword=
-fromStationCode=HWH
-toStationCode=DLI
+irctc_username=
+irctc_password=
+from_station_code=HWH
+to_station_code=DLI
 # Journey date format: dd/mm/yyyy
-journeyDate=01/05/2024
-quota=TATKAL
-trainNumber=12311
+journey_date=07/05/2024
+# Valid jouney quotas: [TATKAL, GENERAL]
+journey_quota=TATKAL
+train_number=12311
 # Valid train classes: [2S, SL, CC, 3E, 3A, 2A, 1A]. Please check the train for available classes.
-trainClass=3A
-# Maximum 4 passengers for TATKAL and 6 passengers for non TATKAL booking are allowed in a single ticket.
-passengerCount=3
+train_class=3A
+# Maximum 4 passengers for TATKAL and 6 passengers for GENERAL quota are allowed in a single ticket.
+passenger_count=3
 # Passenger details format: <full name> | <age> | <gender: [M, F, T]> | <berth preference: [LB, MB, UB, SL, SU]> (optional)
 # Number of passenger details should be equal to the value of 'passengerCount' property with
 # property key as: passenger1, passenger2, passenger3 and so on...
 passenger1=Abhishek Anand | 25 | M | SL
 passenger2=Isha Anand | 20 | F | SU
 passenger3=Priyanshu Anand | 15 | M
-upiId=
+upi_id=
