--- a/src/main/resources/booking.properties
+++ b/src/main/resources/booking.properties
@@ -12,7 +12,7 @@ train_class=3A
 # Maximum 4 passengers for TATKAL and 6 passengers for GENERAL quota are allowed in a single ticket.
 passenger_count=3
 # Passenger details format: <full name> | <age> | <gender: [M, F, T]> | <berth preference: [LB, MB, UB, SL, SU]> (optional)
-# Number of passenger details should be equal to the value of 'passengerCount' property with
+# Number of passenger details should be equal to the value of 'passenger_count' property with
 # property key as: passenger1, passenger2, passenger3 and so on...
 passenger1=Abhishek Anand | 25 | M | SL
 passenger2=Isha Anand | 20 | F | SU
