Add captcha text extraction and filling them functionality.

--- a/src/main/resources/booking.properties
+++ b/src/main/resources/booking.properties
@@ -18,3 +18,5 @@ passenger1=Abhishek Anand | 25 | M | SL
 passenger2=Isha Anand | 20 | F | SU
 passenger3=Priyanshu Anand | 15 | M
 upi_id=
+# value can be 'true' or 'false' for below property
+captcha_text_extraction_enabled=false
