--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.9.1</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>5.12.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
