Add code changes: - Add passenger food perference property. - Add scroll behaviour to catpcha input. - Update readme file. - Organize constant filed valid values.

--- a/src/main/resources/booking.properties
+++ b/src/main/resources/booking.properties
@@ -17,6 +17,8 @@ passenger_count=3
 passenger1=Abhishek Anand | 25 | M | SL
 passenger2=Isha Anand | 20 | F | SU
 passenger3=Priyanshu Anand | 15 | M
+# Valid food preferences: [V (Veg), N (Non Veg), J (Jain meal), F (Veg - diabetic), G (Non veg - diabetic), D (No food)]
+passenger_food_preference=D
 upi_id=
 # value can be 'true' or 'false' for below property
 captcha_text_extraction_enabled=false
